infra/grafana-prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-prom-ingress
  namespace: prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /grafana(/|$)(.*)
            backend:
              service:
                name: prometheus-stack-grafana
                port:
                  number: 80
          - pathType: Prefix
            path: /prometheus(/|$)(.*)
            backend:
              service:
                name: prometheus-stack-kube-prom-prometheus
                port:
                  number: 9090
